@@ -243,6 +243,7 @@ Fixes:
    * Up/down step of hour decimal of elm_clock is changed to 12 not to touch hour unit at editing mode.
    * Remove the keyboard area in the conformant if the keyboard state is off.
    * Fix colorselector send "changed" signal twice when pressed color bar.
+   * Keep the smart members of the naviframe views whenever resize object is changed. This prevents the dangling view objects of the naviframe and keep the layer consistency.
 
 Removals:
 
